tests/fixtures/invalid/round_list_list.py
# Cannot call round() with List[int], List[int]
x = round([1, 2, 3], [1, 2, 3])
